fixing messaging on safari changing color in 4G page

--- a/wp-content/themes/gkc_theme/assets/styles/dangKy4g.css
+++ b/wp-content/themes/gkc_theme/assets/styles/dangKy4g.css
@@ -26,7 +26,6 @@
 }
 
 .promo {
-background: url(../images/image_promo.svg);
 background-repeat: no-repeat;
 background-position: center;
 background-size: contain;
